--- a/frontpage_new/front_new.css
+++ b/frontpage_new/front_new.css
@@ -1,18 +1,83 @@
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Noto Sans TC", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
 .main_container {
     position: relative;
-    background-image: url(../frontpage/frontpage.jpg);
-    width: 100vw;
-    height: 100vh;
-    background-size: auto;
+    background: linear-gradient(to bottom, #a4b7e4, rgb(87, 112, 171));
+    /* width: 100svw; */
+    /* min-height: 100svh; */
+    /* height: 100%; */
     background-size: cover;
-    background-position: right center;
+    background-position: center;
+    /* padding-bottom: 40px; */
+}
+.container {
+    min-height: 100svh;
+    height: 100%;
+    position: relative;
+    max-width: 1200px;
+    margin: auto;
     display: flex;
     justify-content: center;
+    /* align-items: center; */
+    flex-wrap: wrap;
+    padding: 80px 0px;
 }
-.content {
-    font-size: 3rem;
-    line-height: 180px;
-    color: rgb(0, 33, 62);
+.section_div {
+    width: 340px;
+    /* min-height: 645px; */
+    margin: 24px;
+    padding: 24px;
+    background-color: #d8d8d866;
+    border-radius: 20px;
+}
+.section_div > h2 {
+    text-align: center;
+    font-size: 32px;
+}
+.section_div > h3 {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.pages_icon_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.page_card {
+    width: 130px;
+    margin: 16px 0px;
+    cursor: pointer;
+}
+.page_card_img {
+    margin: auto;
+    display: block;
+    width: 100px;
+    padding: 16px;
+    background-color: #f0b890;
+    border-radius: 20px;
+    transition: all 0.3s;
+    box-shadow: 2px 2px 8px 1px #00000040;
+}
+.page_card:hover .page_card_img {
+    box-shadow: 2px 2px 4px 1px #0000007e;
+    transition: all 0.3s;
+    
+}
+.page_card_title {
+    text-align: center;
+    font-size: 20px;
+    padding-top: 8px;
+    letter-spacing: 2px;
 }
 .under-line {
     position: fixed;
@@ -29,18 +94,27 @@
     z-index: 5;
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 1200px) {
     .main_container {
         justify-content: flex-end;
         align-items: center;
+        padding-bottom: 40px;
     }
     .content {
         -webkit-writing-mode: vertical-lr;
         writing-mode: vertical-lr;
     }
+    .section_div {
+        width: 340px;
+        /* height: 480px; */
+        margin: 20px;
+        padding: 24px;
+        background-color: #d8d8d888;
+        border-radius: 20px;
+    }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
     .content {
         -webkit-writing-mode: vertical-lr;
         writing-mode: vertical-lr;
