--- a/login.css
+++ b/login.css
@@ -1,6 +1,6 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    background-image: url('login.jpg');
+    background: linear-gradient(to bottom, #8CAAEE, #344A7D);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -8,11 +8,13 @@ body {
 }
 
 .container {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100svh;
 }
+
 
 .under-line {
     position: fixed;
@@ -28,45 +30,116 @@ body {
     display: block;
 }
 .login-form {
+    box-sizing: border-box;
+    position: relative;
+    width: 340px;
+    height: 300px;
+    padding: 70px 40px 20px;
+    top: -20px;
+}
+.form_login_icon {
+    left: 50%;
+    top: 0px;
+    width: 120px;
+    height: 120px;
+    background-color: #00254D;
+    position: absolute;
+    transform: translateX(-50%) translateY(-50%);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.form_login_icon > img {
+    width: 64px;
+    height: 64px;
+    margin-bottom: 6px;
+}
+.form_background {
+    border-radius: 50px;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: -1;
     width: 100%;
-    max-width: 300px;
-    padding: 20px;
-    border: 1px solid #cccccc;
-    border-radius: 5px;
-    background-color: #ffffffe8;
-    margin-top: -150px;
+    height: 100%;
+    background-color: #d8d8d877;
 }
 
 .login-form h2 {
+    font-size: 20px;
     text-align: center;
-    margin-bottom: 20px;
+    margin: 0px 0px 20px 0px;
+}
+.input_container {
+    display: flex;
+}
+.input_container > label {
+    height: 40px;
+    width: 40px;
+    background-color: #00254D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px 0px 0px 5px;
+}
+.input_container > label > img {
+    width: 20px;
+    height: 20px;
 }
 
-.login-form input {
-	width: 80%;
-	padding: 10px;
-	margin: 0 auto 10px;
-	display: block;
-	border: 1px solid #ccc;
-	border-radius: 5px;
+.input_container > input {
+    padding-left: 8px;
+    border-radius: 0px 5px 5px 0px;
+    border: 0px;
+    background-color: #004c9c;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    flex-grow: 1;
 }
+input:focus {
+    outline: none;
+}
+::placeholder {
+    color: #4791dc;
+    opacity: 1; /* Firefox */
+  }
+  
+  ::-ms-input-placeholder { /* Edge 12 -18 */
+    color: #4791dc;
+  }
 
 .login-form button {
-    width: 50%;
-    padding: 10px;
-    margin: 0 auto;
+    /* transform: translateX(-50%); */
+    width: 240px;
+    height: 40px;
+    /* bottom: -52px; */
+    /* left: 50%; */
+    /* position: absolute; */
 	display: block;
-    background-color: #7c7c7c;
+    margin-top: 20px;
+    background: #F39F65;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 24px 24px 24px 24px;
     cursor: pointer;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 3px;
+    transition: all 0.2s;
+    margin: 20px auto 0px;
+}
+.login-form button:hover {
+    background: #e3a57a;
+    color: #282828;
+
+    transition: all 0.2s;
 }
 
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 550px) {
     .login-form {
-        width: 90%;
+        top: -40px;
     }
-    
 }
